refactor: improve Tree-sitter query implementation and restructure JPA services